# phonon-pumping

./: .gitignore  CMakeLists.txt  README.md  geometry.txt  material_parameters.txt  plot_spectrum.plt
examples/: geometry.conf  geometry_Sato2021_fig3d.conf  material_parameters_Co-Pt-film.conf  material_parameters_YIG-GGG.conf
include/: constants.h  elasticity.h  geometry.h  gnuplot.h  inputs.h  magnetoelasticity.h  materialparameters.h  matrix.h  numerics.h  parser.h  vector.h
src/: elasticity.cpp  geometry.cpp  gnuplot.cpp  magnetoelasticity.cpp  main.cpp  materialparameters.cpp  numerics.cpp  parser.cpp
